feat: Refactor data fetching and UI components
This commit introduces several improvements to the data handling and user interface of the Even Digital Dashboard.

Key changes include:
- **Dynamic Table Identification:** The `dataService` now dynamically identifies marketing, sales, and general data tables based on common naming conventions, making data fetching more robust.
- **UI Component Enhancements:** Several new icons have been added to `App.tsx` and `lucide-react` to enrich the dashboard's visual elements and provide more specific indicators.
- **Code Cleanup:** The `index.html` file has been simplified by removing redundant script comments. The `types.ts` file has been updated to remove the `platformLeads` field from the `ClientLead` interface, as it is no longer relevant.
- **`parseNumeric` Scope:** The `parseNumeric` function has been made a local helper within `dataService.ts`, as it's not intended for external use.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 200: '#c5d9f3',
                 300: '#9ec1ec',
                 400: '#72a4e3',
-                500: '#5992db',
+                500: '#5992db', // Brand Color
                 600: '#3e76c8',
                 700: '#325fa6',
                 800: '#2e4f88',
@@ -68,7 +68,5 @@
 </head>
   <body class="bg-slate-100 text-slate-800 dark:bg-slate-950 dark:text-slate-100 transition-colors duration-200">
     <div id="root"></div>
-    <!-- Script necessário para carregar a aplicação -->
-    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
