--- a/index.html
+++ b/index.html
@@ -68,5 +68,6 @@
 </head>
   <body class="bg-slate-100 text-slate-800 dark:bg-slate-950 dark:text-slate-100 transition-colors duration-200">
     <div id="root"></div>
+    <script type="module" src="./index.tsx"></script>
   </body>
 </html>
