refactor: Update dependencies and import maps
Updates dependencies to their specified versions and adjusts the CDN import map to match. This ensures consistency and utilizes the latest stable versions available for the project's libraries.

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                 200: '#c5d9f3',
                 300: '#9ec1ec',
                 400: '#72a4e3',
-                500: '#5992db', // Brand Color
+                500: '#5992db',
                 600: '#3e76c8',
                 700: '#325fa6',
                 800: '#2e4f88',
@@ -53,19 +53,21 @@
         background-color: #475569;
       }
     </style>
-  <script type="importmap">
+    <script type="importmap">
 {
   "imports": {
+    "react": "https://esm.sh/react@19.0.0",
+    "react-dom": "https://esm.sh/react-dom@19.0.0",
+    "react-dom/client": "https://esm.sh/react-dom@19.0.0/client",
+    "lucide-react": "https://esm.sh/lucide-react@0.475.0?external=react",
+    "recharts": "https://esm.sh/recharts@2.15.0?external=react",
+    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@2.48.1",
     "react/": "https://esm.sh/react@^19.2.3/",
-    "react": "https://esm.sh/react@^19.2.3",
-    "lucide-react": "https://esm.sh/lucide-react@^0.562.0",
-    "recharts": "https://esm.sh/recharts@^3.6.0",
-    "@supabase/supabase-js": "https://esm.sh/@supabase/supabase-js@^2.49.1",
     "react-dom/": "https://esm.sh/react-dom@^19.2.3/"
   }
 }
 </script>
-</head>
+  </head>
   <body class="bg-slate-100 text-slate-800 dark:bg-slate-950 dark:text-slate-100 transition-colors duration-200">
     <div id="root"></div>
     <script type="module" src="./index.tsx"></script>
